View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024191 | Open CASCADE | OCCT:Foundation Classes | public | 2013-09-19 10:53 | 2013-12-19 13:58 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024191: Static assert functionality should be added to Standard_Assert.hxx | ||||
Description | It is necessary to provide the functionality of static_assert macro from C++11 standard for OCC users. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Dear abv, Please, review the branch CR24191 |
|
Reviewed, please test (branch CR24191 is rebased on master). I have changed a bit comments and name of the assert function, and added this assert to QANCollection_4.cxx to avoid compiler warning. |
|
Dear BugMaster, Branch CR24191 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 7cdb7d4447c95d8cbd6e1f8e6b355527a49d0ae6 Number of compiler warnings: occt component : Linux: 506 (506 on master) Windows: 24 (31 on master) products component : Linux: 190 (190 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 366388156 / 366203112 Total CPU difference: 42949.820000000684 / 42279.78000000097 Testing on Windows: Total MEMORY difference: 427994816 / 429036280 Total CPU difference: 37433.375 / 48289.046875 There are not differences in images found by testdiff. |
occt: master 8b381bc3 2013-09-19 12:12:48
Committer: bugmaster Details Diff |
0024191: Static assert functionality should be added to Standard_Assert.hxx Added Standard_STATIC_ASSERT macro for compile-time asserts. The new macro is used in Standard_MMgrOpt and QANCollection. |
Affected Issues 0024191 |
|
mod - src/QANCollection/QANCollection4.cxx | Diff File | ||
mod - src/Standard/Standard_Assert.hxx | Diff File | ||
mod - src/Standard/Standard_MMgrOpt.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-09-19 10:53 |
|
New Issue | |
2013-09-19 10:53 |
|
Assigned To | => omy |
2013-09-19 10:53 |
|
Status | new => assigned |
2013-09-19 16:13 |
|
Note Added: 0025657 | |
2013-09-19 16:13 |
|
Assigned To | omy => abv |
2013-09-19 16:13 |
|
Status | assigned => resolved |
2013-09-20 17:19 |
|
Note Added: 0025681 | |
2013-09-20 17:19 |
|
Assigned To | abv => bugmaster |
2013-09-20 17:19 |
|
Status | resolved => reviewed |
2013-09-20 17:33 |
|
Assigned To | bugmaster => mkv |
2013-09-24 16:22 |
|
Note Added: 0025712 | |
2013-09-24 16:22 |
|
Test case number | => Not needed |
2013-09-24 16:22 |
|
Assigned To | mkv => bugmaster |
2013-09-24 16:22 |
|
Status | reviewed => tested |
2013-09-30 15:53 | bugmaster | Changeset attached | => occt master 8b381bc3 |
2013-09-30 15:53 | bugmaster | Status | tested => verified |
2013-09-30 15:53 | bugmaster | Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:58 | bugmaster | Fixed in Version | => 6.7.0 |