0024191: Static assert functionality should be added to Standard_Assert.hxx

Added Standard_STATIC_ASSERT macro for compile-time asserts.
The new macro is used in Standard_MMgrOpt and QANCollection.